bug: rtb không đúng kích thước trên máy ảo

--- a/LOS Installer.csproj
+++ b/LOS Installer.csproj
@@ -65,14 +65,11 @@
     <None Update="Resources\Script chính.bat">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="Resources\Script cài font.bat">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    <None Update="Resources\Script test.bat">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="Resources\SVN-Avo.ttf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="Resources\test.rtf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="Resources\Triết lý.rtf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
