sửa xong lỗi biến path

--- a/LOS Installer.csproj
+++ b/LOS Installer.csproj
@@ -76,4 +76,8 @@
     </None>
   </ItemGroup>
 
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="cd" />
+  </Target>
+
 </Project>
