--- a/LOS Installer.csproj
+++ b/LOS Installer.csproj
@@ -50,6 +50,9 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <None Update="Resources\3. Tải dữ liệu.bat">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Resources\Chào mừng đến với LOS %28hanoi%29.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
@@ -62,8 +65,8 @@
     <None Update="Resources\facebook2.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="Resources\Script chính.bat">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    <None Update="Resources\2. Cài đặt Obsidian và Git.bat">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="Resources\Script test.bat">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -71,7 +74,7 @@
     <None Update="Resources\SVN-Avo.ttf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="Resources\Triết lý.rtf">
+    <None Update="Resources\Giới thiệu.rtf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
