ignore bin. Thêm các file config để copy vào .obsidian

--- a/LOS Installer.csproj
+++ b/LOS Installer.csproj
@@ -79,6 +79,21 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="Resources\.obsidian\app.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Resources\.obsidian\appearance.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Resources\.obsidian\community-plugins.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Resources\.obsidian\workspace.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
     <Exec Command="cd" />
   </Target>
